Read-only shards should not try to persist the collection routing information locally

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 3.5.12
    • Affects Version/s: 3.5.8
    • Component/s: Sharding
    • None
    • Fully Compatible
    • ALL
    • Sharding 2017-08-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      With the changes to support chunk filtering on shard secondaries, the primary nodes now persist the collection routing information locally. In the case of read-only shards, these writes are failing benignly, but are polluting the logs with messages like this:

      [js_test:count] 2017-06-14T15:34:12.651+0000 d20262| 2017-06-14T15:34:12.415+0000 I SHARDING [ShardServerCatalogCacheLoader-0] OperationFailed: Failed to update the persisted chunk metadata for collection 'test.count' from '4|1||5941576905d04677f27f055f' to '4|1||5941576905d04677f27f055f' due to 'IllegalOperation: Cannot execute a write operation in read-only mode'. Will be retried.
      [js_test:count] 2017-06-14T15:34:12.652+0000 d20262| 2017-06-14T15:34:12.415+0000 I SHARDING [ShardServerCatalogCacheLoader-0] OperationFailed: Failed to update the persisted chunk metadata for collection 'test.count' from '4|1||5941576905d04677f27f055f' to '4|1||5941576905d04677f27f055f' due to 'IllegalOperation: Cannot execute a write operation in read-only mode'. Will be retried.
      

      This ticket is to come up with a solution to prevent read-only shard primaries from writing the chunk routing table.

            Assignee:
            Dianna Hohensee (Inactive)
            Reporter:
            Kaloian Manassiev
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: