SERVER-29694 Read-only shards should not try to persist the collection routing information locally